# software-scanner

./: .gitignore  README.md  build.gradle  generate_djinni.sh  handy.djinni  native_api.yaml  settings.gradle
android/: .gitignore  build.gradle  import-summary.txt  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/cmake/CoreLib/: CoreLibConfig.cmake  CoreLibTargets-noconfig.cmake
android/app/cmake/Modules/CoreLib/: CoreLibConfig.cmake  CoreLibTargets.cmake
android/app/src/androidTest/java/dying/slowly/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CoreLibImpl.cpp  ImgTransformImpl.cpp
android/app/src/main/cpp/interfaces/: CoreLibInterface.hpp  ImgTransformWrapper.hpp
android/app/src/main/cpp/jni/: NativeCoreLibInterface.cpp  NativeCoreLibInterface.hpp  NativeImgTransformWrapper.cpp  NativeImgTransformWrapper.hpp  NativeMat.hpp  NativePoint.cpp  NativePoint.hpp
android/app/src/main/java/com/github/dawidkski/scanner/camera/: CameraBridgeViewBase.java  CameraIndex.java  CvCameraViewListener.java  ImageSaver.java
android/app/src/main/java/com/github/dawidkski/scanner/fragments/: CameraFragment.java  PermissionsFragment.java  ScannedImageFragment.java
android/app/src/main/java/dying/slowly/: BetterView.kt  MainActivity.kt  TextViewHack.java
android/app/src/main/res/drawable/: button_round.xml
android/app/src/main/res/layout/: activity_main.xml  camera_fragment.xml  fragment_main.xml  main_activity.xml  main_pager_activity.xml  scanned_image.xml  scanned_image_fragment.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/test/java/dying/slowly/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
core/: CMakeLists.txt
core/app/src/: main.cpp
core/corelib/: CMakeLists.txt
core/corelib/cmake/: CoreLibConfig.cmake.in
core/corelib/include/corelib/: detect.hpp  img_utils.h
core/corelib/src/: detect.cpp  img_utils.cpp
core/prototype-python/: .gitignore  README.org  main.py
gradle/wrapper/: gradle-wrapper.properties
scanner/: CMakeLists.txt  build.sh
scanner-app/: build.gradle
scanner-app/src/main/java/com/github/dawidkski/scanner/: MainActivity.java
scanner-app/src/main/java/com/github/dawidkski/scanner/camera/: Camera.java  CameraBridgeViewBase.java  CameraCaptureCaptureCallback.java  CameraCaptureStateCallback.java  CameraDeviceStateCallback.java  CameraState.java  CameraView.java  CameraViewController.java  CameraViewListener.java  CvCameraViewFrame.java  CvCameraViewListener.java  ImageSaver.java  JavaCamera2Frame.java  JavaCamera2View.java
scanner-app/src/main/java/com/github/dawidkski/scanner/camera/frame/: CameraFrame.java  GrayCameraFrame.java  RGBACameraFrame.java
scanner-app/src/main/java/com/github/dawidkski/scanner/fragments/: CameraFragment.java  PermissionsFragment.java  ScannedImageFragment.java
scanner-app/src/main/res/layout/: camera_fragment.xml
scanner-app/src/main/res/navigation/: nav_graph.xml
scanner-app/src/main/res/values/: strings.xml
scanner/app/src/: main.cpp
scanner/cmake/: java.cmake
scanner/scanner/: CMakeLists.txt  README.md
scanner/scanner/include/scanner/: img_utils.h  scanner.hpp
scanner/scanner/java/: CMakeLists.txt  scanner.i
scanner/scanner/src/: img_utils.cpp  scanner.cpp
